@@ -18,6 +18,7 @@ Bugs fixed
 
 * #8188: C, add missing items to internal object types dictionary,
   e.g., preventing intersphinx from resolving them.
+* C, fix anon objects in intersphinx.
 
 
 Testing
